# revelox

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/agents/: git-committer.md  test-writer.md
src/revelox/: __main__.py  chat.py  config.py  dialer.py  main.py  recording.py  script.py  server.py  tts.py
src/revelox/cli/: init_cmd.py  main.py  run_cmd.py
src/revelox/utils/: e164.py
templates/: default_config.yaml
tests/: conftest.py
tests/chat/: test_chat.py
tests/cli/: test_init_cmd.py  test_main.py  test_run_cmd.py
tests/config/: test_config.py
tests/dialer/: test_dialer.py
tests/recording/: test_recording.py
tests/script/: test_script.py
tests/server/: test_server.py
tests/tts/: test_tts.py
