[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revelox"
version = "0.1.0"
description = "Adversarial security testing for voice AI agents"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydub>=0.25",
    "structlog>=24.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
twilio = ["twilio>=9.0"]
deepgram = ["deepgram-sdk>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
websockets = ["websockets>=12.0"]
all = [
    "revelox[twilio,deepgram,openai,anthropic,websockets]",
]
dev = [
    "revelox[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
revelox = "revelox.cli.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/revelox"]